--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <li class="project"><dl><dt>Yet Another Weibo Filter 看真正想看的微博</dt><dd>
     <span class="details">新浪微博根据关键词、作者、话题、来源等过滤微博，修改版面等功能的用户脚本</span><ul>
       <li><a href="https://tiansh.github.io/yawf/zh-cn.html">脚本主页</a></li>
+      <li><a href="https://tiansh.github.io/yawf/fqa.html">常见问题</a></li>
+      <li><a href="https://tiansh.github.io/yawf-rules/index.html">规则订阅</a></li>
   </ul></dd></dl></li>
   <li class="project"><dl><dt>ASS Danmaku Downloader</dt><dd>
     <span class="details">AcFun / bilibili 下载 ASS 格式弹幕文件</span><ul>
