更新项目列表

--- a/index.html
+++ b/index.html
@@ -25,41 +25,41 @@
 <h1>田生</h1>
 <ul class="projects">
   <li class="project"><dl><dt>Yet Another Weibo Filter 看真正想看的微博</dt><dd>
-    <span class="details">新浪微博根据关键词、作者、话题、来源等过滤微博，修改版面等功能的用户脚本</span><ul>
-      <li><a href="https://tiansh.github.io/yawf/zh-cn.html">脚本主页</a></li>
-      <li><a href="https://tiansh.github.io/yawf/fqa.html">常见问题</a></li>
-      <li><a href="https://tiansh.github.io/yawf-rules/index.html">规则订阅</a></li>
+    <span class="details">微博第三方浏览器扩展/用户脚本。用于根据关键词、作者、话题、来源等过滤微博，修改和清理版面等</span><ul>
+    <li><a href="https://tiansh.github.io/yawf/">脚本版</a></li>
+    <li><a href="https://addons.mozilla.org/zh-CN/firefox/addon/yawf/?src=external-gh-user-home">Firefox 扩展</a></li>
   </ul></dd></dl></li>
-  <li class="project"><dl><dt>ASS Danmaku Downloader</dt><dd>
-    <span class="details">AcFun / bilibili 下载 ASS 格式弹幕文件</span><ul>
-      <li><a href="https://tiansh.github.io/us-danmaku/bilibili/">bilibili</a></li>
-      <li><a href="https://tiansh.github.io/us-danmaku/acfun/">AcFun</a></li>
+  <li class="project"><dl><dt>隐藏 Twitter 推广内容</dt><dd>
+    <span class="details">浏览器扩展，可以隐藏 Twitter 网页上的各类推广内容，隐藏一些嵌入消息流的模块，以及首页自动切换到最新推文</span><ul>
+    <li><a href="https://addons.mozilla.org/en-US/firefox/addon/block-twitter-promoted/">Firefox 扩展</a></li>
   </ul></dd></dl></li>
-  <li class="project"><dl><dt>知乎免登录</dt><dd>
-    <span class="details">知乎查看完整的回答而无需注册登录</span><ul>
-    <li><a href="https://tiansh.github.io/us-else/zhihu_visitor/">脚本主页</a></li>
+  <li class="project"><dl><dt>TXT 阅读器</dt><dd>
+    <span class="details">一个 Web App 的 TXT 阅读器。<br />iOS 上使用 Safari 打开并“添加到主屏幕”后即可使用。自用为主。</span><ul>
+    <li><a href="https://addons.mozilla.org/en-US/firefox/addon/block-twitter-promoted/">tReader</a></li>
   </ul></dd></dl></li>
-  <li class="project"><dl><dt>其他用户脚本</dt><dd><ul>
-    <li><a href="https://tiansh.github.io/us-else/web_wechat_fast_reply/">网页微信快捷回复</a></li>
-    <li><a href="https://tiansh.github.io/us-else/zhihu_shorter/">知乎短答案排前面</a></li>
-    <li><a href="https://github.com/tiansh/us-else/blob/master/jandan_xx_post_hidden/jandan_xx_post_hidden.user.js">煎蛋隐藏 XX 较多的评论</a></li>
-    <li><a href="http://tiansh.github.io/us-else/weibo_music_download_tool/">微博音乐下载</a></li>
+  <li class="project"><dl><dt>ASS 格式弹幕下载</dt><dd>
+    <span class="details">浏览器扩展，支持从 AcFun, Bahamut, bilibili, Niconico 以 ASS 格式下载弹幕</span><ul>
+    <li><a href="https://addons.mozilla.org/en-US/firefox/addon/ass-danmaku/">Firefox 扩展</a></li>
+    <li><a href="https://tiansh.github.io/ass-danmaku-online/">在线转换</a></li>
   </ul></dd></dl></li>
-  <li class="project"><dl><dt>2048</dt><dd>
-    <span class="details">各种改出来玩的 2048 版本</span><ul>
-      <li><a href="https://tiansh.github.io/2048/">一维（1×21）</a></li>
-      <li><a href="https://tiansh.github.io/2048/zhong/">甲乙丙丁</a></li>
-      <li><a href="https://tiansh.github.io/2048/zhong/seal/">甲乙丙丁（篆书）</a></li>
-      <li><a href="https://tiansh.github.io/2048s/">带存档读档</a></li>
-  </ul></dd></dl></li>
+  <li class="project"><dl><dt>其他一些 Firefox 扩展</dt><dd>
+    <span class="details"><a href="https://addons.mozilla.org/en-US/firefox/addon/classical-search-bar/">Classical Search Bar</a>：一个快速切换搜索引擎的按钮</span>
+    <span class="details"><a href="https://addons.mozilla.org/en-US/firefox/addon/simple-context-search/">Simple Context Search</a>：最简单的右键菜单搜索扩展</span>
+    <span class="details"><a href="https://addons.mozilla.org/en-US/firefox/addon/account-per-container/">Account Per Container</a>：为不同容器自动填充账号</span>
+    <span class="details"><a href="https://addons.mozilla.org/en-US/firefox/addon/always-in-container/">Always In Container</a>：保证每个页面都在容器内打开</span>
+  </dd></dl></li>
   <li class="project"><dl><dt>Dvorak 改键</dt><dd>
     <span class="details">将 QWERTY 映射为 Dvorak 的 AHK 脚本，按住 LWin 可临时切换回 QWERTY （供快捷键使用）</span><ul>
-      <li><a href="https://github.com/tiansh/q2d">主页</a></li>
-      <li><a href="https://github.com/tiansh/q2d/raw/master/Qwerty2Dvorak-ansi32.zip">ANSI 32位</a></li>
-      <li><a href="https://github.com/tiansh/q2d/raw/master/Qwerty2Dvorak-unicode32.zip">Unicode 32位</a></li>
-      <li><a href="https://github.com/tiansh/q2d/raw/master/Qwerty2Dvorak-unicode64.zip">Unicode 64位</a></li>
+    <li><a href="https://github.com/tiansh/q2d">主页</a></li>
+    <li><a href="https://github.com/tiansh/q2d/raw/master/Qwerty2Dvorak-ansi32.zip">ANSI 32位</a></li>
+    <li><a href="https://github.com/tiansh/q2d/raw/master/Qwerty2Dvorak-unicode32.zip">Unicode 32位</a></li>
+    <li><a href="https://github.com/tiansh/q2d/raw/master/Qwerty2Dvorak-unicode64.zip">Unicode 64位</a></li>
   </ul></dd></dl></li>
   <li class="project"><dl><dt>杂项</dt><dd>
+    <span class="details"><a href="https://tiansh.github.io/2048/">一维（1×21）</a></span>
+    <span class="details"><a href="https://tiansh.github.io/2048/zhong/">甲乙丙丁</a></span>
+    <span class="details"><a href="https://tiansh.github.io/2048/zhong/seal/">甲乙丙丁（篆书）</a></span>
+    <span class="details"><a href="https://tiansh.github.io/2048s/">带存档读档</a></span>
     <span class="details"><a href="https://github.com/tiansh/styles/blob/master/Resizable_Web_WeChat.css">网页微信适应窗口大小样式</a></span>
     <span class="details"><a href="https://tiansh.github.io/lqbz/tjmj/">网页的天津麻将游戏</a></span>
     <span class="details"><a href="https://github.com/tiansh/exam-index-creator">开卷考试用索引排版工具</a></span>
@@ -67,11 +67,6 @@
     <span class="details"><a href="https://tiansh.github.io/lqbz/sp/">双拼当量计算</a></span>
     <span class="details"><a href="http://tiansh.github.io/us-guide/install.html">用户脚本安装的帮助</a></span>
     <span class="details"><a href="https://github.com/tiansh/pascal">中学时的一些 Pascal 小游戏</a></span>
-  </dd></dl></li>
-  <li class="project"><dl><dt>已停更用户脚本</dt><dd>
-    <span class="details"><a href="http://tiansh.github.io/rbb/">恢复 bilibili 播放器的用户脚本</a></span>
-    <span class="details"><a href="https://github.com/tiansh/us-blbl">其他 bilibili 相关用户脚本</a></span>
-    <span class="details"><a href="https://github.com/tiansh/us-webqq">网页 QQ 相关用户脚本</a></span>
   </dd></dl></li>
 </ul>
 </body>
