--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </ul></dd></dl></li>
   <li class="project"><dl><dt>TXT 阅读器</dt><dd>
     <span class="details">一个 Web App 的 TXT 阅读器。<br />iOS 上使用 Safari 打开并“添加到主屏幕”后即可使用。自用为主。</span><ul>
-    <li><a href="https://addons.mozilla.org/en-US/firefox/addon/block-twitter-promoted/">tReader</a></li>
+    <li><a href="https://tiansh.github.io/reader/">tReader</a></li>
   </ul></dd></dl></li>
   <li class="project"><dl><dt>ASS 格式弹幕下载</dt><dd>
     <span class="details">浏览器扩展，支持从 AcFun, Bahamut, bilibili, Niconico 以 ASS 格式下载弹幕</span><ul>
